# static-analysis

./: README.md
src/: CMakeLists.txt  analyze  analyze.cpp  text.cpp
src/.cache/clangd/index/: main.cpp.FE0EC20CBDE62E12.idx
src/computer-science/: a.out  detect_unused_var.cpp  test.cpp
